--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi8TaDbZSGuUulUZzXwh4asA_1K8eQfDI&libraries=places&libraries=visualization&callback=initMap"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi8TaDbZSGuUulUZzXwh4asA_1K8eQfDI&libraries=places&libraries=visualization&callback=initMap"></script>
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
