--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi8TaDbZSGuUulUZzXwh4asA_1K8eQfDI&libraries=places&libraries=visualization&callback=initMap"></script>
-
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDi8TaDbZSGuUulUZzXwh4asA_1K8eQfDI&libraries=places&libraries=visualization"></script>
+    <!--/*am sters &callback=initMap de la finalul src*/ -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
