--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuq71EcDSL5xprZ9s73vaPMmSqSIeVdeQ&libraries=places&libraries=visualization"></script>
+    <script src="/src/App.js" type="text/javascript"></script>
+    <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuq71EcDSL5xprZ9s73vaPMmSqSIeVdeQ&libraries=places&libraries=visualization" type="text/javascript"></script>
     <!--/*am sters &callback=initMap de la finalul src*/ -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
